--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -3,43 +3,43 @@
  *
  * Adjusts styling for theme option controls in the Customizer
  *
- * @package Wellington Pro
+ * @package Treville Pro
  */
 
-#customize-control-wellington_theme_options-logo_spacing {
+#customize-control-treville_theme_options-logo_spacing {
 	margin-top: 16px;
 }
 
-#customize-control-wellington_theme_options-footer_text textarea {
+#customize-control-treville_theme_options-footer_text textarea {
 	height: 4em;
 }
 
 /* Custom Font Control */
-.customize-control-wellington_pro_custom_font {
+.customize-control-treville_pro_custom_font {
 	margin-bottom: 24px;
 }
 
-.customize-control-wellington_pro_custom_font .actions,
-.customize-control-wellington_pro_custom_font_list .actions {
+.customize-control-treville_pro_custom_font .actions,
+.customize-control-treville_pro_custom_font_list .actions {
 	margin-top: 8px;
 }
 
-.customize-control-wellington_pro_custom_font .actions .button.previous {
+.customize-control-treville_pro_custom_font .actions .button.previous {
 	margin-right: 4px;
 }
 
-.customize-control-wellington_pro_custom_font .actions .button.standard {
+.customize-control-treville_pro_custom_font .actions .button.standard {
 	float: right;
 }
 
-.customize-control-wellington_pro_custom_font select {
+.customize-control-treville_pro_custom_font select {
 	width: 100%;
 }
 
-.customize-control-wellington_pro_custom_font div:hover {
+.customize-control-treville_pro_custom_font div:hover {
 	cursor: default;
 }
 
-.customize-control-wellington_pro_custom_font .actions .button:hover {
+.customize-control-treville_pro_custom_font .actions .button:hover {
 	cursor: pointer;
 }
