--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -1,17 +1,17 @@
 /*
- * Wellington Settings CSS
+ * Treville Settings CSS
  *
  * CSS Stylesheet for settings page on Appearance -> Pro Version
  *
- * @package Wellington Pro
+ * @package Treville Pro
  */
 
 /* License Settings */
-.wellington-pro-settings-wrap {
+.treville-pro-settings-wrap {
 	margin: 25px 0 0;
 }
 
-.wellington-pro-settings-wrap .license-status {
+.treville-pro-settings-wrap .license-status {
 	display: inline-block;
 	margin: 0 12px 0 0;
 	padding: 4px 8px;
@@ -20,19 +20,19 @@
 	text-transform: uppercase;
 }
 
-.wellington-pro-settings-wrap .license-active {
+.treville-pro-settings-wrap .license-active {
 	background: green;
 }
 
-.wellington-pro-settings-wrap .license-invalid,
-.wellington-pro-settings-wrap .license-expired {
+.treville-pro-settings-wrap .license-invalid,
+.treville-pro-settings-wrap .license-expired {
 	background: red;
 }
 
-.wellington-pro-settings-wrap .license-description {
+.treville-pro-settings-wrap .license-description {
 	margin: 16px 0 0;
 }
 
-.wellington-pro-settings-wrap .license-renewal {
+.treville-pro-settings-wrap .license-renewal {
 	margin: 16px 0 0;
 }
