added social icons navigation

--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -10,150 +10,27 @@
 
 
 /*--------------------------------------------------------------
-# Header Bar
+# Header Social Icons
 --------------------------------------------------------------*/
-.header-bar-wrap {
-	width: 100%;
-	border-bottom: 1px solid rgba(0,0,0,0.15);
-	background: #fff;
-}
-
-.header-bar {
-	position: relative;
-	margin: 0 auto;
-	max-width: 1300px;
-}
-
-.top-navigation-toggle {
-	display: none;
-}
-
-.top-navigation-menu {
-	display: inline;
-	float: left;
-	margin: 0;
-	padding: 0 0.5em;
-	list-style-position: outside;
-	list-style-type: none;
-}
-
-.top-navigation-menu li {
-	float: left;
-}
-
-.top-navigation-menu a {
-	display: block;
-	margin: 0;
-	padding: 0.75em 1em;
-	text-decoration: none;
-	font-size: 15px;
-	font-size: 0.9375rem;
-	font-family: 'Gudea', Tahoma, Arial;
-}
-
-.top-navigation-menu > .menu-item-has-children > a:after {
-	display: inline-block;
-	margin: 0.6em 0 0 0.4em;
-	content: '\f431';
-	vertical-align: top;
-	text-decoration: inherit;
-	font-size: 12px;
-	font-family: 'Genericons';
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.top-navigation-menu a:link,
-.top-navigation-menu a:visited {
-	color: #303030;
-}
-
-.top-navigation-menu a:hover,
-.top-navigation-menu a:active {
-	color: rgba(0,0,0,0.5);
-}
-
-.top-navigation-menu ul {
-	position: absolute;
-	z-index: 9999;
-	display: none;
-	margin: 0;
-	padding: 0;
-	border-top: 1px solid rgba(0,0,0,0.15);
-	background: #fff;
-	list-style-position: outside;
-	list-style-type: none;
-}
-
-.top-navigation-menu ul li{
-	position: relative;
-	float: none;
-}
-
-.top-navigation-menu ul a {
-	box-sizing: border-box;
-	padding: 1em;
-	min-width: 250px;
-	min-width: 16rem;
-	border-bottom: 1px solid rgba(0,0,0,0.15);
-	font-size: 13px;
-	font-size: 0.8125rem;
-}
-
-.top-navigation-menu ul .menu-item-has-children > a:after {
-	display: inline-block;
-	margin: 0.3em 0 0 0.3em;
-	content: '\f431';
-	vertical-align: top;
-	text-decoration: inherit;
-	font-size: 14px;
-	font-family: 'Genericons';
-	line-height: 1;
-	-webkit-transform: rotate(270deg);
-	-moz-transform: rotate(270deg);
-	-o-transform: rotate(270deg);
-	-ms-transform: rotate(270deg);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.top-navigation-menu li ul ul {
-	top: 0;
-	left: 100%;
-	margin: -1px 0 0;
-}
-
-.top-navigation-menu li.menu-item-has-children:hover > ul,
-.top-navigation-menu li.menu-item-has-children[aria-expanded="true"] > ul {
-	display: block;
-}
-
-.top-navigation-menu li.current-menu-item > a {
-	background: rgba(0,0,0,0.05);
-}
-
-.top-navigation-menu li.current-menu-item > a:after {
-	text-decoration: none;
-}
-
-.header-bar .social-icons-navigation {
+.header-area .social-icons-navigation {
 	float: right;
-	margin: 0 0.8em;
+	margin: 0 0 0 1.75em;
+	padding: 0.75em 0 0.65em;
 }
 
-.header-bar .social-icons-menu li a {
-	padding: 0.8em;
-	color: #303030;
+.header-area .social-icons-menu li a {
+	padding: 0.5em;
+	-webkit-transition: all 0.2s ease;
+	transition: all 0.2s ease;
 }
 
-.header-bar .social-icons-menu li a:before {
-	font-size: 22px;
+.header-area .social-icons-menu li a:before {
+	font-size: 21px;
 }
 
-.header-bar .social-icons-menu li a:hover,
-.header-bar .social-icons-menu li a:active {
-	color: rgba(0,0,0,0.5);
+.header-area .social-icons-menu li a:hover,
+.header-area .social-icons-menu li a:active {
+	color: rgba(255,255,255,0.5);
 	text-decoration: none;
 }
 
@@ -426,6 +303,32 @@
 ## Desktop Small ( < 960px )
 --------------------------------------------------------------*/
 @media only screen and (max-width: 60em) {
+
+	/* Header Social Icons */
+	.header-area .social-icons-navigation {
+		display: none;
+		float: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu {
+		float: left;
+		display: block;
+		text-align: center;
+		padding: 1.5em 0 0;
+		width: 100%;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu li {
+		float: none;
+		display: inline-block;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu li a:before {
+		font-size: 24px;
+	}
+
 	/* Magazine Posts */
 	.widget-magazine-posts .magazine-horizontal-box .large-post .entry-content,
 	.widget-magazine-posts .magazine-horizontal-box .large-post .more-link {
@@ -460,158 +363,6 @@
 	.widget-magazine-posts-sidebar .type-post .entry-content {
 		font-size: 17px;
 		font-size: 1.0625rem;
-	}
-
-	/*** Mobile Top Navigation ***/
-
-	/* Reset */
-	.top-navigation-menu {
-		margin: 0;
-	}
-	.top-navigation-menu li {
-		position: static;
-		float: none;
-	}
-
-	.top-navigation-menu ul {
-		position: static;
-		display: block;
-	}
-
-	.top-navigation-menu ul a {
-		float: none;
-		width: auto;
-	}
-
-	.top-navigation-menu li ul ul {
-		margin-left: 0;
-	}
-
-	.top-navigation-menu li:hover ul ul,
-	.top-navigation-menu li:hover ul ul ul,
-	.top-navigation-menu li:hover ul ul ul ul,
-	.top-navigation-menu li:hover ul,
-	.top-navigation-menu li li:hover ul,
-	.top-navigation-menu li li li:hover ul,
-	.top-navigation-menu li li li li:hover ul {
-		display: inline;
-	}
-
-	.top-navigation-menu > .menu-item-has-children > a:after {
-		display: none;
-	}
-
-
-	/* Top Navigation Toggle */
-	.top-navigation-toggle {
-		display: inline-block;
-		padding: 0.8em;
-		background: none;
-		color: #303030;
-	}
-
-	.top-navigation-toggle:hover,
-	.top-navigation-toggle:active,
-	.top-navigation-toggle:focus {
-		background: none;
-		color: rgba(0,0,0,0.5);
-		cursor: pointer;
-	}
-
-	.top-navigation-toggle:after {
-		display: inline-block;
-		float: left;
-		content: '\f419';
-		vertical-align: middle;
-		text-decoration: inherit;
-		font-weight: normal;
-		font-size: 22px;
-		font-family: 'Genericons';
-		line-height: 1;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
-	}
-
-	/* Top Navigation Menu */
-	.top-navigation-menu {
-		display: none;
-		float: left;
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		border-top: 1px solid rgba(0,0,0,0.15);
-	}
-
-	.top-navigation-menu a {
-		display: block;
-		clear: left;
-		padding: 1em 1.25em;
-		border-bottom: 1px solid rgba(0,0,0,0.15);
-	}
-
-	.top-navigation-menu li:last-child a {
-		border-bottom: none;
-	}
-
-	.top-navigation-menu ul {
-		width: 100%;
-		border: none;
-	}
-
-	.top-navigation-menu ul a {
-		display: block;
-		padding-left: 3em;
-		width: 100%;
-	}
-
-	.top-navigation-menu ul li ul a {
-		padding-left: 4em;
-	}
-
-	.top-navigation-menu ul li ul li ul a {
-		padding-left: 5em;
-	}
-
-	.top-navigation-menu ul li ul li ul li ul a {
-		padding-left: 6em;
-	}
-
-	.top-navigation-menu ul li:last-child a {
-		border-bottom: 1px solid rgba(0,0,0,0.15);
-	}
-
-	/* Mobile Submenu Dropdowns */
-	.top-navigation-menu .submenu-dropdown-toggle {
-		display: block;
-		float: right;
-		margin: 0;
-		padding: 0.75em 1.25em;
-		color: #303030;
-	}
-
-	.top-navigation-menu .submenu-dropdown-toggle:before {
-		content: '\f431';
-		vertical-align: middle;
-		text-decoration: inherit;
-		font-size: 24px;
-		font-family: 'Genericons';
-		line-height: 1;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
-	}
-
-	.top-navigation-menu .submenu-dropdown-toggle:hover,
-	.top-navigation-menu .submenu-dropdown-toggle:active {
-		color: rgba(0,0,0,0.5);
-		cursor: pointer;
-	}
-
-	.top-navigation-menu .submenu-dropdown-toggle.active:before {
-		content: '\f432';
-	}
-
-	.top-navigation-menu ul .submenu-dropdown-toggle {
-		padding: 0.4em 1em;
 	}
 
 	/* Footer Navigation */
