--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -35,6 +35,40 @@
 }
 
 /*--------------------------------------------------------------
+# Header Search
+--------------------------------------------------------------*/
+.header-search {
+	float: right;
+	margin-right: -1em;
+}
+
+.header-search .search-form .search-field {
+	padding: 1em 1em 0.92em 1em;
+	min-width: 250px;
+	background: #fff;
+	border: none;
+	border-left: 1px solid rgba(0,0,0,0.1);
+}
+
+.header-search .search-form .search-submit {
+	margin: 1em;
+	padding: 0 0.4em;
+	background: #fff;
+	border: none;
+}
+
+.header-search .search-form .search-submit .genericon-search {
+	padding: 0;
+	color: #454545;
+	font-size: 24px;
+}
+
+.header-search .search-form .search-submit:hover .genericon-search,
+.header-search .search-form .search-submit:active .genericon-search {
+	color: rgba(0,0,0,0.5);
+}
+
+/*--------------------------------------------------------------
 # Magazine Post Widgets
 --------------------------------------------------------------*/
 
@@ -218,11 +252,6 @@
 	.site {
 		box-shadow: 0 2px 2px #aaa;
 	}
-
-	.header-bar-wrap {
-		background: #fafafa;
-		box-shadow: 0 0 2px #aaa;
-	}
 }
 
 /*--------------------------------------------------------------
@@ -251,11 +280,6 @@
 --------------------------------------------------------------*/
 @media only screen and (max-width: 70em) {
 	.site {
-		box-shadow: none;
-	}
-
-	.header-bar-wrap {
-		border-bottom: 1px solid #ddd;
 		box-shadow: none;
 	}
 
@@ -418,7 +442,6 @@
 	.widget-magazine-posts .magazine-horizontal-box .large-post .entry-content {
 		display: none;
 	}
-
 }
 
 /*--------------------------------------------------------------
@@ -519,17 +542,4 @@
 		font-size: 20px;
 		font-size: 1.25rem;
 	}
-
-}
-
-/*--------------------------------------------------------------
-# Media Query Fixes
---------------------------------------------------------------*/
-
-/* Ensure footer navigation is visible on desktop view */
-@media only screen and (min-width: 60.001em) {
-	.top-navigation-menu {
-		display: block !important;
-	}
-
 }
