--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -141,55 +141,45 @@
 # Footer Widgets
 --------------------------------------------------------------*/
 .footer-widgets-background {
-	padding: 2.5em 3em 0;
-	border-bottom: 1px solid rgba(255,255,255,0.1);
-	background: #303030;
+	padding: 2rem 0 0;
+	border-bottom: 1px solid rgba(255,255,255,0.05);
+	background: #454545;
 }
 
 .footer-widgets {
-	margin-right: -2.5em;
-}
-
-.footer-widgets .widget {
-	margin: 0 0 2.5em;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-right: -2rem;
 }
 
 /* Default: Four Column Footer Widgets */
 .footer-widget-column {
-	float: left;
-	box-sizing: border-box;
-	padding-right: 2.5em;
 	width: 25%;
-}
-
-/* One Column Footer Widgets
-* Using Sibling Count: http://andr3.net/blog/post/142
-*/
-.footer-widget-column:nth-child(1):nth-last-child(1) {
-	float: none;
-	width: 100%;
-}
-
-/* Two Column Footer Widgets */
-.footer-widget-column:nth-child(1):nth-last-child(2),
-.footer-widget-column:nth-child(2):nth-last-child(1) {
-	width: 50%;
-}
-
-/* Three Column Footer Widgets */
-.footer-widget-column:nth-child(1):nth-last-child(3),
-.footer-widget-column:nth-child(2):nth-last-child(2),
-.footer-widget-column:nth-child(3):nth-last-child(1) {
-	width: 33.3333%;
+	padding-right: 2rem;
+	box-sizing: border-box;
+	-webkit-flex-grow: 1;
+	flex-grow: 1;
 }
 
 /* Footer Widget Styling */
 .footer-widgets .widget {
 	color: #fff;
+	border: 1px solid rgba(255,255,255,0.05);
+	box-shadow: none;
+	background: none;
+}
+
+.footer-widgets .widget-header {
+	box-shadow: none;
 }
 
 .footer-widgets .widget-title {
 	color: #fff;
+	background: rgba(255,255,255,0.025);
+	border-bottom: 1px solid rgba(255,255,255,0.025);
 }
 
 .footer-widgets .widget a:link,
@@ -257,21 +247,18 @@
 /*--------------------------------------------------------------
 ## Desktop Large ( < 1200px )
 --------------------------------------------------------------*/
-@media only screen and (max-width: 80em) {
+@media only screen and (max-width: 75em) {
 	.footer-widgets-background {
-		padding: 2em 2em 0;
+		padding: 1.5rem 0 0;
 	}
 
 	.footer-widgets {
-		margin-right: -2em;
+		margin-right: -1.5rem;
 	}
 
-	.footer-widgets .widget {
-		margin: 0 0 2em;
-	}
-
+	/* Default: Four Column Footer Widgets */
 	.footer-widget-column {
-		padding-right: 2em;
+		padding-right: 1.5rem;
 	}
 }
 
@@ -316,10 +303,6 @@
 	.footer-widget-column:nth-child(3):nth-last-child(2),
 	.footer-widget-column:nth-child(4):nth-last-child(1) {
 		width: 50%;
-	}
-
-	.footer-widget-column:nth-child(3):nth-last-child(2) {
-		clear: left;
 	}
 }
 
@@ -514,7 +497,6 @@
 	}
 
 	#footer-widgets .footer-widget-column {
-		float: none;
 		padding-right: 0;
 		width: 100%;
 	}
