--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -203,7 +203,7 @@
 	position: relative;
 	display: block;
 	margin: 0;
-	padding: 2.25em 3em;
+	padding: 1.25em 0;
 	list-style-position: outside;
 	list-style-type: none;
 }
@@ -216,8 +216,14 @@
 .footer-navigation-menu a {
 	display: block;
 	margin: 0;
-	padding: 0.75em 1em;
+	padding: 1.2em;
 	text-decoration: none;
+	font-weight: normal;
+	font-size: 15px;
+	font-size: 0.9375rem;
+	font-family: 'Magra', Tahoma, Arial;
+	-webkit-transition: all 0.2s ease;
+	transition: all 0.2s ease;
 }
 
 .footer-navigation-menu a:link,
@@ -386,6 +392,10 @@
 		display: inline-block;
 		float: none;
 	}
+
+	.footer-navigation-menu a {
+		padding: 0.8em 1.2em;
+	}
 }
 
 /*--------------------------------------------------------------
@@ -473,8 +483,8 @@
 
 	/* Footer Navigation Menu */
 	.footer-navigation {
-		padding-bottom: 2em;
-		border-bottom: 1px solid rgba(255,255,255,0.1);
+		padding-bottom: 1.5em;
+		border-bottom: 1px solid rgba(255,255,255,0.05);
 	}
 
 	.footer-navigation-menu li,
@@ -483,7 +493,7 @@
 	}
 
 	.footer-navigation-menu a {
-		padding: 0.4em 0;
+		padding: 0.6em 0;
 	}
 }
 
