--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -245,6 +245,47 @@
 }
 
 /*--------------------------------------------------------------
+# Scroll to Top Button
+--------------------------------------------------------------*/
+.scroll-to-top-button {
+	z-index: 9999;
+	width: 45px;
+	height: 45px;
+	display: inline;
+	position: fixed;
+	cursor: pointer;
+	margin: 0 auto;
+	padding: 0;
+	right: 1.5em;
+	bottom: 1.5em;
+	background: #1177aa;
+	transition: none;
+}
+
+.scroll-to-top-button:focus,
+.scroll-to-top-button:active {
+	background: #1177aa;
+}
+
+.scroll-to-top-button:hover {
+	background: #454545;
+}
+
+.scroll-to-top-button:after {
+	display: inline-block;
+	margin: 0 0 0 3px;
+	color: #fff;
+	content: '\f432';
+	vertical-align: top;
+	text-decoration: inherit;
+	font-size: 28px;
+	font-family: 'Genericons';
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+/*--------------------------------------------------------------
 # Media Queries
 --------------------------------------------------------------*/
 
@@ -263,6 +304,11 @@
 	/* Default: Four Column Footer Widgets */
 	.footer-widget-column {
 		padding-right: 1.5rem;
+	}
+
+	.scroll-to-top-button {
+		right: 1em;
+		bottom: 1em;
 	}
 }
 
@@ -338,6 +384,10 @@
 	.footer-widget-column:nth-child(2):nth-last-child(2),
 	.footer-widget-column:nth-child(3):nth-last-child(1) {
 		width: 100%;
+	}
+
+	.scroll-to-top-button {
+		display: none !important;
 	}
 }
 
