--- a/sass/modules/header-bar.scss
+++ b/sass/modules/header-bar.scss
@@ -16,6 +16,6 @@
 
 .header-area .social-icons-menu li a:hover,
 .header-area .social-icons-menu li a:active {
-	color: rgba(255,255,255,0.5);
+	color: rgba(255, 255, 255, 0.5);
 	text-decoration: none;
 }
