--- a/sass/modules/header-search.scss
+++ b/sass/modules/header-search.scss
@@ -37,6 +37,7 @@
 	#masthead .header-search {
 		display: block;
 		margin-left: auto;
+		border: none;
 	}
 
 	.header-search .search-form .search-field {
