--- a/assets/css/treville-pro-rtl.css
+++ b/assets/css/treville-pro-rtl.css
@@ -1,45 +1,63 @@
 /*
  * Treville Pro CSS
  *
- * Copyright(C) 2017, ThemeZee.com - support@themezee.com
- * License: GPL v3
- * License URI: http://www.gnu.org/licenses/gpl-3.0.html
+ * Copyright(C) 2020, ThemeZee.com - support@themezee.com
+ * License: GNU General Public License v2 or later
+ * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  *
  * @package Treville Pro
  */
 
+/*--------------------------------------------------------------
+# - CSS Variables
+--------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
 # Header Social Icons
 --------------------------------------------------------------*/
-.header-area .social-icons-navigation {
-	float: left;
-	margin: 0 1.75em 0 0;
+.header-social-icons {
+	display: none;
 	padding: 0.75em 0 0.65em;
 }
 
-.header-area .social-icons-menu li a {
+.secondary-navigation.toggled-on .header-social-icons {
+	display: block;
+}
+
+.header-social-icons .social-icons-menu li a {
 	padding: 0.5em;
 	-webkit-transition: all 0.2s ease;
 	transition: all 0.2s ease;
 }
 
-.header-area .social-icons-menu li a:before {
+.header-social-icons .social-icons-menu li a::before {
 	font-size: 21px;
 }
 
-.header-area .social-icons-menu li a:hover,
-.header-area .social-icons-menu li a:active {
-	color: rgba(255,255,255,0.5);
+.header-social-icons .social-icons-menu li a:hover,
+.header-social-icons .social-icons-menu li a:active {
+	color: rgba(255, 255, 255, 0.5);
 	text-decoration: none;
+}
+
+@media only screen and (min-width: 60em) {
+	#masthead .header-social-icons {
+		display: block;
+		margin-right: 1.75em;
+	}
 }
 
 /*--------------------------------------------------------------
 # Header Search
 --------------------------------------------------------------*/
 .header-search {
-	float: left;
-	margin-left: -1em;
+	display: none;
+	background: #fff;
+}
+
+.primary-navigation-wrap.toggled-on .header-search {
+	display: block;
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .header-search .search-form .search-field {
@@ -47,7 +65,6 @@
 	min-width: 250px;
 	background: #fff;
 	border: none;
-	border-right: 1px solid rgba(0,0,0,0.1);
 }
 
 .header-search .search-form .search-submit {
@@ -65,11 +82,23 @@
 
 .header-search .search-form .search-submit:hover .genericon-search,
 .header-search .search-form .search-submit:active .genericon-search {
-	color: rgba(0,0,0,0.5);
+	color: rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (min-width: 60em) {
+	#masthead .header-search {
+		display: block;
+		margin-right: auto;
+		border: none;
+	}
+
+	.header-search .search-form .search-field {
+		border-right: 1px solid rgba(0, 0, 0, 0.1);
+	}
 }
 
 /*--------------------------------------------------------------
-# Magazine Post Widgets
+# Magazine Widgets
 --------------------------------------------------------------*/
 
 /* Magazine Vertical Boxed Widget */
@@ -151,7 +180,7 @@
 .entry-author {
 	margin: 0;
 	padding: 1.5rem;
-	border-top: 1px solid rgba(0,0,0,0.1);
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .entry-author .author-avatar {
@@ -190,7 +219,7 @@
 --------------------------------------------------------------*/
 .footer-widgets-background {
 	padding: 2rem 0 0;
-	border-bottom: 1px solid rgba(255,255,255,0.05);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 	background: #454545;
 }
 
@@ -214,7 +243,7 @@
 /* Footer Widget Styling */
 .footer-widgets .widget {
 	color: #fff;
-	border: 1px solid rgba(255,255,255,0.05);
+	border: 1px solid rgba(255, 255, 255, 0.05);
 	box-shadow: none;
 	background: none;
 }
@@ -225,22 +254,22 @@
 
 .footer-widgets .widget-title {
 	color: #fff;
-	background: rgba(255,255,255,0.025);
-	border-bottom: 1px solid rgba(255,255,255,0.025);
+	background: rgba(255, 255, 255, 0.025);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.025);
 }
 
 .footer-widgets .widget a:link,
-.footer-widgets .widget a:visited  {
+.footer-widgets .widget a:visited {
 	color: #fff;
 }
 
 .footer-widgets .widget a:hover,
-.footer-widgets .widget a:active  {
-	color: rgba(255,255,255,0.5);
+.footer-widgets .widget a:active {
+	color: rgba(255, 255, 255, 0.5);
 }
 
 /*--------------------------------------------------------------
-# Footer Navigation
+# Footer Menu
 --------------------------------------------------------------*/
 .footer-navigation {
 	float: left;
@@ -281,7 +310,7 @@
 
 .footer-navigation-menu a:hover,
 .footer-navigation-menu a:active {
-	color: rgba(255,255,255,0.5);
+	color: rgba(255, 255, 255, 0.5);
 }
 
 /*--------------------------------------------------------------
@@ -369,7 +398,6 @@
 ## Desktop Small ( < 960px )
 --------------------------------------------------------------*/
 @media only screen and (max-width: 60em) {
-
 	/* Header Social Icons */
 	.header-area .social-icons-navigation {
 		display: none;
@@ -452,7 +480,7 @@
 	/* Footer Navigation Menu */
 	.footer-navigation {
 		padding-bottom: 1.5em;
-		border-bottom: 1px solid rgba(255,255,255,0.05);
+		border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 	}
 
 	.footer-navigation-menu li,
