updated Typography options

--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -21,12 +21,11 @@
 
 /* Custom Font Control */
 .customize-control-treville_pro_custom_font {
-	margin-bottom: 24px;
+	margin-top: 24px;
 }
 
-.customize-control-treville_pro_custom_font .actions,
-.customize-control-treville_pro_custom_font_list .actions {
-	margin-top: 8px;
+#customize-control-text_font {
+	margin-top: 0;
 }
 
 .customize-control-treville_pro_custom_font .actions .button.previous {
@@ -47,6 +46,11 @@
 
 .customize-control-treville_pro_custom_font .actions .button:hover {
 	cursor: pointer;
+}
+
+/* Typography Checkbox Controls */
+#sub-accordion-section-treville_pro_section_typography .customize-control-checkbox {
+	margin-bottom: 0;
 }
 
 /* Magazine Sections */
