--- a/sass/modules/footer-menu.scss
+++ b/sass/modules/footer-menu.scss
@@ -39,3 +39,39 @@
 .footer-navigation-menu a:active {
 	color: rgba(255,255,255,0.5);
 }
+
+@media only screen and (max-width: 60em) {
+	.footer-navigation {
+		float: none;
+		text-align: center;
+	}
+
+	.footer-navigation-menu {
+		padding-bottom: 0;
+	}
+
+	.footer-navigation-menu li {
+		display: inline-block;
+		float: none;
+	}
+
+	.footer-navigation-menu a {
+		padding: 0.8em 1.2em;
+	}
+}
+
+@media only screen and (max-width: 40em) {
+	.footer-navigation {
+		padding-bottom: 1.5em;
+		border-bottom: 1px solid rgba(255,255,255,0.05);
+	}
+
+	.footer-navigation-menu li,
+	.footer-navigation-menu a {
+		display: block;
+	}
+
+	.footer-navigation-menu a {
+		padding: 0.6em 0;
+	}
+}
