--- a/sass/modules/footer-widgets.scss
+++ b/sass/modules/footer-widgets.scss
@@ -48,3 +48,51 @@
 .footer-widgets .widget a:active  {
 	color: rgba(255,255,255,0.5);
 }
+
+@media only screen and (max-width: 75em) {
+	.footer-widgets-background {
+		padding: 1.5rem 0 0;
+	}
+
+	.footer-widgets {
+		margin-right: -1.5rem;
+	}
+
+	/* Default: Four Column Footer Widgets */
+	.footer-widget-column {
+		padding-right: 1.5rem;
+	}
+
+	.scroll-to-top-button {
+		right: 1em;
+		bottom: 1em;
+	}
+}
+
+@media only screen and (max-width: 65em) {
+	.footer-widget-column:nth-child(1):nth-last-child(4),
+	.footer-widget-column:nth-child(2):nth-last-child(3),
+	.footer-widget-column:nth-child(3):nth-last-child(2),
+	.footer-widget-column:nth-child(4):nth-last-child(1) {
+		width: 50%;
+	}
+}
+
+@media only screen and (max-width: 50em) {
+	.footer-widget-column:nth-child(1):nth-last-child(3),
+	.footer-widget-column:nth-child(2):nth-last-child(2),
+	.footer-widget-column:nth-child(3):nth-last-child(1) {
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width: 35em) {
+	.footer-widgets {
+		margin-right: 0;
+	}
+
+	#footer-widgets .footer-widget-column {
+		padding-right: 0;
+		width: 100%;
+	}
+}
