--- a/sass/modules/magazine-widgets.scss
+++ b/sass/modules/magazine-widgets.scss
@@ -71,3 +71,96 @@
 	font-size: 17px;
 	font-size: 1.0625rem;
 }
+
+@media only screen and (max-width: 40em) {
+	.widget-magazine-horizontal-box .magazine-grid-three-columns .post-column:last-child {
+		display: none;
+	}
+
+	.widget-magazine-list .large-post .wp-post-image {
+		max-width: 30%;
+	}
+
+	.widget-magazine-list .large-post .post-content {
+		width: 70%;
+	}
+
+	.widget-magazine-list .large-post .entry-title {
+		font-size: 17px;
+		font-size: 1.0625rem;
+	}
+}
+
+@media only screen and (max-width: 35em) {
+	.widget-magazine-vertical-box .left-post,
+	.widget-magazine-vertical-box .small-posts {
+		float: none;
+		padding: 0;
+		width: 100%;
+	}
+
+	.widget-magazine-vertical-box .small-posts {
+		padding-bottom: 0.5em;
+	}
+
+	.widget-magazine-vertical-box .large-post .entry-title {
+		font-size: 18px;
+		font-size: 1.125rem;
+	}
+
+	.widget-magazine-vertical-box .large-post .entry-meta {
+		display: block;
+	}
+}
+
+@media only screen and (max-width: 30em) {
+	.widget-magazine-horizontal-box .magazine-grid-three-columns .post-column:last-child {
+		display: block;
+	}
+
+	.widget-magazine-vertical-box .large-post .entry-title {
+		font-size: 17px;
+		font-size: 1.0625rem;
+	}
+
+	.widget-magazine-list .large-post .wp-post-image {
+		max-width: 35%;
+	}
+
+	.widget-magazine-list .large-post .post-content {
+		width: 65%;
+		padding: 0.25em 0.75em;
+	}
+
+	.widget-magazine-list .large-post .entry-title {
+		font-size: 16px;
+		font-size: 1rem;
+	}
+
+	.widget-magazine-list .large-post .entry-meta {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 25em) {
+	.widget-magazine-vertical-box .large-post .entry-title {
+		font-size: 16px;
+		font-size: 1rem;
+	}
+
+	.widget-magazine-list .large-post .post-content {
+		padding: 0 0.75em;
+	}
+
+	.widget-magazine-list .large-post .entry-title {
+		font-size: 15px;
+		font-size: 0.9375rem;
+	}
+}
+
+@media only screen and (max-width: 20em) {
+	.widget-magazine-vertical-box .large-post .entry-title {
+		font-size: 15px;
+		font-size: 0.9375rem;
+	}
+}
